chore: add basic skeleton for endpoint implementation.
