# api/openapi.yaml
@@ -16,7 +16,27 @@ tags:
     description: Everything about the books in the store
   - name: store
     description: Everything about the orders and inventory in the store
+  - name: health
+    description: Healthyness of the service API
 paths:
+  /health/readiness:
+    get:
+      tags:
+        - health
+      summary: Get health status
+      operationId: GetReadiness
+      responses:
+        "200":
+          description: The health check readiness responses
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/HealthCheckResponse"
+        "500":
+          description: Server error
+        "503":
+          description: Service unavailable
+
   /discount:
     post:
       tags:
@@ -42,6 +62,8 @@ paths:
           description: Invalid input
         "422":
           description: Validation exception
+        "500":
+          description: server error
 
   /discount/{discountId}:
     get:
@@ -67,7 +89,12 @@ paths:
                 items:
                   $ref: "#/components/schemas/DiscountCode"
         "400":
+          description: Invalid parameters
+        "404":
           description: DiscountCode not found
+        "500":
+          description: Server error
+
     patch:
       tags:
         - discount
@@ -101,6 +128,9 @@ paths:
           description: Discount not found
         "422":
           description: Validation exception
+        "500":
+          description: Server error
+
     delete:
       tags:
         - discount
@@ -117,6 +147,10 @@ paths:
       responses:
         "400":
           description: Invalid discountId value
+        "404":
+          description: Discont not found
+        "500":
+          description: Server error
 
   /author:
     post:
@@ -143,6 +177,8 @@ paths:
           description: Invalid input
         "422":
           description: Validation exception
+        "500":
+          description: Server error
 
   /author/{authorId}:
     get:
@@ -168,7 +204,12 @@ paths:
                 items:
                   $ref: "#/components/schemas/Author"
         "400":
+          description: Invalid parameters
+        "404":
           description: Author not found
+        "500":
+          description: Server error
+
     patch:
       tags:
         - author
@@ -197,11 +238,14 @@ paths:
               schema:
                 $ref: "#/components/schemas/Author"
         "400":
-          description: Invalid ID supplied
+          description: Invalid parameters
         "404":
           description: Author not found
         "422":
           description: Validation exception
+        "500":
+          description: Server error
+
     delete:
       tags:
         - author
@@ -218,6 +262,10 @@ paths:
       responses:
         "400":
           description: Invalid authorId value
+        "404":
+          description: Author not found
+        "500":
+          description: Server error
 
   /book:
     post:
@@ -244,6 +292,8 @@ paths:
           description: Invalid input
         "422":
           description: Validation exception
+        "500":
+          description: Server error
 
   /book/{bookId}:
     get:
@@ -269,7 +319,12 @@ paths:
                 items:
                   $ref: "#/components/schemas/Book"
         "400":
+          description: Invalid parameters
+        "404":
           description: Book not found
+        "500":
+          description: Server error
+
     patch:
       tags:
         - book
@@ -298,11 +353,14 @@ paths:
               schema:
                 $ref: "#/components/schemas/Book"
         "400":
-          description: Invalid ID supplied
+          description: Invalid parameters
         "404":
           description: Book not found
         "422":
           description: Validation exception
+        "500":
+          description: Server error
+
     delete:
       tags:
         - book
@@ -319,6 +377,10 @@ paths:
       responses:
         "400":
           description: Invalid bookId value
+        "404":
+          description: BookId not found
+        "500":
+          description: Server error
 
   /book/findByAuthorId:
     get:
@@ -348,6 +410,10 @@ paths:
                   $ref: "#/components/schemas/Book"
         "400":
           description: Invalid author values
+        "404":
+          description: Author not found
+        "500":
+          description: Server error
 
   /book/findbyGenereId:
     get:
@@ -377,6 +443,10 @@ paths:
                   $ref: "#/components/schemas/Book"
         "400":
           description: Invalid genre values
+        "404":
+          description: Genere not found
+        "500":
+          description: Server error
 
   /book/findbyStatus:
     get:
@@ -406,6 +476,8 @@ paths:
                   $ref: "#/components/schemas/Book"
         "400":
           description: Invalid status value
+        "500":
+          description: Server error
 
   /store/inventory:
     get:
@@ -421,6 +493,8 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Inventory"
+        "500":
+          description: Server error
 
   /store/order:
     post:
@@ -445,6 +519,8 @@ paths:
           description: Invalid input
         "422":
           description: Validation exception
+        "500":
+          description: Server error
 
   /store/order/{orderId}:
     get:
@@ -471,6 +547,9 @@ paths:
           description: Invalid ID supplied
         "404":
           description: Order not found
+        "500":
+          description: Server error
+
     patch:
       tags:
         - store
@@ -499,11 +578,14 @@ paths:
               schema:
                 $ref: "#/components/schemas/Book"
         "400":
-          description: Invalid ID supplied
+          description: Invalid parameters
         "404":
           description: Order not found
         "422":
           description: Validation exception
+        "500":
+          description: Server error
+
     delete:
       tags:
         - store
@@ -525,6 +607,9 @@ paths:
           description: Invalid ID supplied
         "404":
           description: Order not found
+        "500":
+          description: Server error
+
 components:
   securitySchemes:
     api_key:
@@ -936,3 +1021,12 @@ components:
         books_out_of_stock:
           type: integer
           format: int32
+
+    HealthCheckResponse:
+      type: object
+      properties:
+        status:
+          type: string
+          enum:
+            - serving
+            - ready
